Fix a bug with text overflowing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -430,6 +430,7 @@ header .brand-logo,
     background-color: #f5e9e9;
     border-radius: 12px;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
+    overflow: auto;
 }
 
 .recipe-info .ing-heading,
